WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
270633
[Skia] fast/canvas/canvas-webkitLineDash-invalid.html is crashing
https://bugs.webkit.org/show_bug.cgi?id=270633
Summary
[Skia] fast/canvas/canvas-webkitLineDash-invalid.html is crashing
Claudio Saavedra
Reported
2024-03-07 05:23:42 PST
.
Attachments
Add attachment
proposed patch, testcase, etc.
Claudio Saavedra
Comment 1
2024-03-07 05:28:49 PST
Pull request:
https://github.com/WebKit/WebKit/pull/25578
EWS
Comment 2
2024-03-07 06:09:05 PST
Committed
275787@main
(338528b22bcd): <
https://commits.webkit.org/275787@main
> Reviewed commits have been landed. Closing PR #25578 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2024-03-07 06:10:14 PST
<
rdar://problem/124206941
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug