[Skia] fast/canvas/canvas-webkitLineDash-invalid.html is crashing https://bugs.webkit.org/show_bug.cgi?id=270633

Reviewed by Carlos Garcia Campos.

The assert in setLineDash() is problematic because setting
canvas.webkitLineDash with an odd-sized vector will pass
it down unchecked (contrary to using canvas.setLineDash(), which
will double the size in that case). Skia can handle an odd-sized
vector just fine, so there's no need for this assert.

This fixes the crashing fast/canvas/canvas-webkitLineDash-invalid.html
test, caused by the assert.

* Source/WebCore/platform/graphics/skia/GraphicsContextSkia.cpp:
(WebCore::GraphicsContextSkia::setLineDash):

Canonical link: https://commits.webkit.org/275787@main